Do style reresolves and restyles due to attribute changes asynchronously so that pages that modify two or more style properties of the same object in a row work faster.  Bug 230170, r+sr=dbaron